fix tag overflow

--- a/days7SearchTag/style.css
+++ b/days7SearchTag/style.css
@@ -31,6 +31,7 @@ body {
     padding: 10px;
     margin: 20px 0;
     font-size: 18px;
+    overflow:auto;
 }
 .content li {
     list-style: none;
@@ -40,6 +41,7 @@ body {
     margin: 4px 3px;
     color: white;
     align-items: center;
+    word-wrap: break-word;
 }
 .content li i {
     font-size: 25px;
